# sfml-Flappy-Duck

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.zig  xmake.lua
include/: is_pixel.h  layer.hpp  main.hpp  pipe.hpp  player.hpp  score_list.hpp
lib/sfml/: manifest.txt  references.txt
lib/sfml/lib/pkgconfig/: sfml.pc
src/: layer.cc  main.cc  pipe.cc  player.cc  score_list.cc
